#318 Fix z-index conflict on phones.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -101,19 +101,20 @@ $grid-breakpoints: (
 
 // Z-index master list
 
-$z-index-mobile-nav:         0;
-$z-index-rich-editor-touch: 10;
-$z-index-hairline:          20;
-$z-index-search-bar:        30;
-$z-index-level:             30;
-$z-index-level-active:      40;
-$z-index-navbar:            40;
-$z-index-menu:              50;
-$z-index-popover:						60;
-$z-index-modal:             60;
-$z-index-drag-layer:        60;
-$z-index-errors:            70;
-$z-index-loading-cover:     80;
+$z-index-mobile-nav:          0;
+$z-index-rich-editor-touch:  10;
+$z-index-hairline:           20;
+$z-index-search-bar:         30;
+$z-index-touch-tag-selector: 40;
+$z-index-level:              30;
+$z-index-level-active:       40;
+$z-index-navbar:             40;
+$z-index-menu:               50;
+$z-index-popover:						 60;
+$z-index-modal:              60;
+$z-index-drag-layer:         60;
+$z-index-errors:             70;
+$z-index-loading-cover:      80;
 
 
 // Navbbar
