--- a/src/scss/components/tag/_touch-selector.scss
+++ b/src/scss/components/tag/_touch-selector.scss
@@ -11,7 +11,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: $z-index-search-bar;
+	z-index: $z-index-touch-tag-selector;
 	background-color: $touch-tag-selector-pane-bg;
 
 	.filter-container {
